# gish

./: Cargo.toml  README.md  gish.desktop
src/: main.rs  myterminal.rs
