[package]
name = "gish"
version = "0.1.0"
authors = ["physics3D <kroener.tobias@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
glib = "0.10.3"
gtk = "0.9.2"
hotwatch = "0.4.5"

[dependencies.vte]
git = "https://gitlab.com/Miridyan/vte-rs.git"
branch = "master"

