[package]
name = "gish"
version = "0.1.0"
authors = ["physics3D <kroener.tobias@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.14.0"
glib = "0.14.2"
gtk = "0.14.0"
ignore = "0.4.18"
notify = "4.0.17"

[dependencies.vte]
git = "https://gitlab.com/Miridyan/vte-rs.git"
branch = "master"

